--- a/php81-nginx/nginx.conf
+++ b/php81-nginx/nginx.conf
@@ -5,15 +5,35 @@ server {
 
     index index.php index.html index.htm;
 
+    client_max_body_size 30m;
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
     location ~ \.php$ {
-        fastcgi_pass unix:/var/run/php-fpm.sock;
+        try_files $uri =404;
+        fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        
+
+        gzip on;
+        gzip_vary on;
+        gzip_proxied any;
+        gzip_http_version 1.1;
+        gzip_min_length 128;
+        gzip_types application/javascript application/x-javascript text/html application/json;
+    }
+
+    location ~* \.(js|css)$ {
+        gzip_proxied any;
+        expires 1y;
+        access_log off;
+        add_header Cache-Control "public";
+        gzip_static on;
     }
 
     location ~ /\.ht {
